--- a/freecodeCampProject-Node-js/04-store-API/package.json
+++ b/freecodeCampProject-Node-js/04-store-API/package.json
@@ -3,5 +3,16 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "name": "04-store-api",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
