--- a/freecodeCampProject-Node-js/04-store-API/package.json
+++ b/freecodeCampProject-Node-js/04-store-API/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
@@ -7,10 +8,9 @@
   "name": "04-store-api",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
